# wave-pde-studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate_vs_solution.bat  generate_vs_solution_cpu.bat
src/: CudaWave.cu  CudaWave.h  MainWindow.cpp  MainWindow.h  SimWidget.cpp  SimWidget.h  Simulator.cpp  Simulator.h  Stencil.h  Types.h  main.cpp
